--- a/Index.html
+++ b/Index.html
@@ -84,13 +84,13 @@
             <button>Explore Chain</button>
            </div>
 
-           <img src="../New folder/Images/cryptocurrency-chain-4416130-3663991.avif" alt="">
+           <img src="./Images/cryptocurrency-chain-4416130-3663991.avif" alt="">
         </div>
     </section>
 
     <section class="props2">
         <div class="props2_content" style="justify-content: space-between;">
-            <img src="../New folder/Images/crypto-coins-4180930-3457456.png" alt="">
+            <img src="./Images/crypto-coins-4180930-3457456.png" alt="">
            <div class="props2_text">
             <h1 style="width: 100%;">Trade Any Crypto Coin Or Token On The Exchange</h1>
             <p style="width: 90%;">Blockchain allow you to record every transaction within the web3 DEX platform</p>
@@ -108,13 +108,13 @@
             <button>View Market Chart</button>
            </div>
 
-           <img src="../New folder/Images/cryptocurrency-chart-5401597-4521529.avif" alt="">
+           <img src="./Images/cryptocurrency-chart-5401597-4521529.avif" alt="">
         </div>
     </section>
 
     <section class="props2">
         <div class="props2_content" style="justify-content: space-between;">
-            <img src="../New folder/Images/solana-sol-cryptocurrency-5108596-4263933.avif" alt="">
+            <img src="./Images/solana-sol-cryptocurrency-5108596-4263933.avif" alt="">
            <div class="props2_text">
             <h1 style="width: 100%;">Explore The NFTs Marketplace</h1>
             <p style="width: 90%;">Blockchain allow you to record every transaction within the web3 DEX platform</p>
