--- a/Index.html
+++ b/Index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web3 website</title>
+    <link rel="icon" type="image/x-icon" href="/Images/icon.png">
     <link rel="stylesheet" href="./Style.css">
 </head>
 <body id="main">
     <nav>
-        <label class="logo" for="logo">DEX</label>
+        <img style="width:120px;" src="./Images/dexme.svg" alt="" class="logo">
         <ul>
             <li><a href="">About</a></li>
             <li><a href="">Exchange</a></li>
