--- a/Index.html
+++ b/Index.html
@@ -183,7 +183,7 @@
     </section>
 
     <footer>
-        <label class="logo" for="logo">DEX</label>
+        <img style="width:120px;" src="./Images/dexme.svg" alt="" class="logo">
         <ul style="font-size: 16px;">
             <li><a href="">About</a></li>
             <li><a href="">Exchange</a></li>
